--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Notes</title>
-
-    <link href="static/css/font-awesome.min.css" rel="stylesheet">
-    <link href="static/css/index.css" rel="stylesheet">
-
-    <script>window.$ = window.jQuery = require('jquery');</script>
-    <script src="static/js/jquery-ui.min.js"></script>
-    <script src="static/js/index.js"></script>
-
-</head>
-<body>
-    <div id="container">
-        <div id="tab-headers-wrapper">
-            <div id="tab-headers">
-            </div>
-            <div id="add-tab">New tab</div>
-        </div>
-        <div id="tabs">
-        </div>
-    </div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>notes</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
